--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <ul class="page-list-nav">
 
                     <li class="page-item-nav">
-                        <a class="page-link-nav" href="./index.html">Studio
+                        <a class="page-link-nav page-link-nav-hover" href="./index.html">Studio
                         </a>
                     </li>
                     <li class="page-item-nav">
@@ -76,11 +76,23 @@
                 <h2 class="visually-hidden">Our benefits</h2>
                 <ul class="page-benefis-list">
                     <li class="benefits-item">
+                        <div class="icon-benefits-contener">
+                            <svg class="icon-benefits" width="64" heigth="64">
+                                <use href="./images/icon/sprit.svg#icon-antenna"></use>
+                            </svg>
+                        </div>
+
                         <h3 class="title-item">Strategy</h3>
                         <p class="text-item">Our goal is to identify the business
                             problem to walk away with the perfect and creative solution.</p>
+
                     </li>
                     <li class="benefits-item">
+                        <div class="icon-benefits-contener">
+                            <svg class="icon-benefits" width="64" heigth="64">
+                                <use href="./images/icon/sprit.svg#icon-clock"></use>
+                            </svg>
+                        </div>
                         <h3 class="title-item">Punctuality</h3>
                         <p class="text-item">Bring the key message to the brand's audience for the best price within
                             the
@@ -88,12 +100,24 @@
                             time.</p>
                     </li>
                     <li class="benefits-item">
+                        <div class="icon-benefits-contener">
+                            <svg class="icon--benefits" width="64" heigth="64">
+                                <use href="./images/icon/sprit.svg#icon-diagram"></use>
+                            </svg>
+                        </div>
+
                         <h3 class="title-item">Diligence</h3>
                         <p class="text-item">Research and confirm brands that present the strongest digital growth
                             opportunities and minimize
                             risk.</p>
                     </li>
                     <li class="benefits-item">
+                        <div class="icon-benefits-contener">
+                            <svg class="icon-benefits" width="64" heigth="64">
+                                <use href="./images/icon/sprit.svg#icon-astronaut"></use>
+                            </svg>
+                        </div>
+
                         <h3 class="title-item">Technologies</h3>
                         <p class="text-item">Design practice focused on digital experiences. We bring forth a deep
                             passion
@@ -115,6 +139,34 @@
                         <div class="info-team">
                             <h3 class="title-item">Mark Guerrero</h3>
                             <p class="text-item">Product Designer</p>
+                            <ul class="icon-team-list">
+                                <li class="icon-team-item">
+                                    <a class="icon-team-link">
+                                        <svg class="icon-team" width="16" height="16">
+                                            <use href="./images/icon/sprit.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-team-item">
+                                    <a class="icon-team-link">
+                                        <svg class="icon-team" width="16" height="16">
+                                            <use href="./images/icon/sprit.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-team-item"><a class="icon-team-link">
+                                        <svg class="icon-team" width="16" height="16">
+                                            <use href="./images/icon/sprit.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a></li>
+                                <li class="icon-team-item"><a class="icon-team-link">
+                                        <svg class="icon-team" width="16" height="16">
+                                            <use href="./images/icon/sprit.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+
                         </div>
                     </li>
                     <li class="page-team-item">
@@ -123,7 +175,35 @@
                         <div class="info-team">
                             <h3 class="title-item">Tom Ford</h3>
                             <p class="text-item">Frontend Developer</p>
+                            <ul class="icon-team-list">
+                                <li class="icon-team-item">
+                                    <a class="icon-team-link">
+                                        <svg class="icon-team" width="16" height="16">
+                                            <use href="./images/icon/sprit.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-team-item">
+                                    <a class="icon-team-link">
+                                        <svg class="icon-team" width="16" height="16">
+                                            <use href="./images/icon/sprit.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-team-item"><a class="icon-team-link">
+                                        <svg class="icon-team" width="16" height="16">
+                                            <use href="./images/icon/sprit.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a></li>
+                                <li class="icon-team-item"><a class="icon-team-link">
+                                        <svg class="icon-team" width="16" height="16">
+                                            <use href="./images/icon/sprit.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
+
                     </li>
                     <li class="page-team-item">
                         <img class="img-team" src="./images/team/camila_garcia.jpg" alt="camila_garcia avatar"
@@ -132,6 +212,33 @@
 
                             <h3 class="title-item">Camila Garcia</h3>
                             <p class="text-item">Marketing</p>
+                            <ul class="icon-team-list">
+                                <li class="icon-team-item">
+                                    <a class="icon-team-link">
+                                        <svg class="icon-team" width="16" height="16">
+                                            <use href="./images/icon/sprit.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-team-item">
+                                    <a class="icon-team-link">
+                                        <svg class="icon-team" width="16" height="16">
+                                            <use href="./images/icon/sprit.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-team-item"><a class="icon-team-link">
+                                        <svg class="icon-team" width="16" height="16">
+                                            <use href="./images/icon/sprit.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a></li>
+                                <li class="icon-team-item"><a class="icon-team-link">
+                                        <svg class="icon-team" width="16" height="16">
+                                            <use href="./images/icon/sprit.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="page-team-item">
@@ -140,6 +247,33 @@
                         <div class="info-team">
                             <h3 class="title-item">Daniel Wilson</h3>
                             <p class="text-item">UI Designer</p>
+                            <ul class="icon-team-list">
+                                <li class="icon-team-item">
+                                    <a class="icon-team-link">
+                                        <svg class="icon-team" width="16" height="16">
+                                            <use href="./images/icon/sprit.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-team-item">
+                                    <a class="icon-team-link">
+                                        <svg class="icon-team" width="16" height="16">
+                                            <use href="./images/icon/sprit.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-team-item"><a class="icon-team-link">
+                                        <svg class="icon-team" width="16" height="16">
+                                            <use href="./images/icon/sprit.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a></li>
+                                <li class="icon-team-item"><a class="icon-team-link">
+                                        <svg class="icon-team" width="16" height="16">
+                                            <use href="./images/icon/sprit.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
 
@@ -153,11 +287,26 @@
                 <h2 class="title-page-portfolio" id="Our_Portfolio"> Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="item-portfolio">
-                        <img src="./images/portfolio/bank_app.jpg" alt="banking_app" width="360" height="300">
-                        <div class="info-portfolio">
-                            <h3 class="title-item">Banking App</h3>
-                            <p class="text-item">App</p>
+                        <div>
+                            <div class="overlay-container">
+                                <img src="./images/portfolio/bank_app.jpg" alt="banking_app" width="360" height="300">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App
+                                    · Calorie Tracker App
+                                    · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
+
+
+                            <div class="info-portfolio">
+                                <h3 class="title-item">Banking App</h3>
+                                <p class="text-item">App</p>
+                            </div>
+
+
                         </div>
+
+
                     </li>
                     <li class="item-portfolio">
                         <img src="./images/portfolio/cashlist_payment.jpg" alt="cashless_payment" width="360"
@@ -206,10 +355,50 @@
 
     <footer class="page-footer">
         <div class="container container-footer">
-            <a class="logo logo-footer" href="./index.html">Web<span class="accent-footer">Studio</span></a>
-            <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing &
-                growth solutions.
-            </p>
+            <div><a class="logo logo-footer" href="./index.html">Web<span class="accent-footer">Studio</span></a>
+                <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing
+                    &
+                    growth solutions.
+                </p>
+            </div>
+
+
+            <div class=" container icon-footer-container">
+                <p class="text-footer-icon">Social media</p>
+
+                <ul class="icon-footer-list">
+                    <li class="icon-footer-item">
+                        <a class="icon-footer-link">
+                            <svg class="icon-footer" width="24" height="24">
+                                <use href="./images/icon/sprit.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icon-footer-item">
+                        <a class="icon-footer-link">
+                            <svg class="icon-footer" width="24" height="24">
+                                <use href="./images/icon/sprit.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icon-footer-item">
+                        <a class="icon-footer-link">
+                            <svg class="icon-footer" width="24" height="24">
+                                <use href="./images/icon/sprit.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icon-footer-item">
+                        <a class="icon-footer-link">
+                            <svg class="icon-footer" width="24" height="24">
+                                <use href="./images/icon/sprit.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+
         </div>
 
     </footer>
