add initiale files

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <ul class="page-benefis-list">
                     <li class="benefits-item">
                         <div class="icon-benefits-contener">
-                            <svg class="icon-benefits" width="64" heigth="64">
+                            <svg class="icon-benefits" width="64" height="64">
                                 <use href="./images/icon/sprit.svg#icon-antenna"></use>
                             </svg>
                         </div>
@@ -89,7 +89,7 @@
                     </li>
                     <li class="benefits-item">
                         <div class="icon-benefits-contener">
-                            <svg class="icon-benefits" width="64" heigth="64">
+                            <svg class="icon-benefits" width="64" height="64">
                                 <use href="./images/icon/sprit.svg#icon-clock"></use>
                             </svg>
                         </div>
@@ -101,7 +101,7 @@
                     </li>
                     <li class="benefits-item">
                         <div class="icon-benefits-contener">
-                            <svg class="icon--benefits" width="64" heigth="64">
+                            <svg class="icon--benefits" width="64" height="64">
                                 <use href="./images/icon/sprit.svg#icon-diagram"></use>
                             </svg>
                         </div>
@@ -113,7 +113,7 @@
                     </li>
                     <li class="benefits-item">
                         <div class="icon-benefits-contener">
-                            <svg class="icon-benefits" width="64" heigth="64">
+                            <svg class="icon-benefits" width="16" height="16">
                                 <use href="./images/icon/sprit.svg#icon-astronaut"></use>
                             </svg>
                         </div>
