--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <li class="benefits-item">
                         <div class="icon-benefits-contener">
                             <svg class="icon-benefits" width="64" height="64">
-                                <use href="./images/icon/sprit.svg#icon-antenna"></use>
+                                <use href="./images/icon/icons.svg#icon-antenna"></use>
                             </svg>
                         </div>
 
@@ -90,7 +90,7 @@
                     <li class="benefits-item">
                         <div class="icon-benefits-contener">
                             <svg class="icon-benefits" width="64" height="64">
-                                <use href="./images/icon/sprit.svg#icon-clock"></use>
+                                <use href="./images/icon/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
                         <h3 class="title-item">Punctuality</h3>
@@ -102,7 +102,7 @@
                     <li class="benefits-item">
                         <div class="icon-benefits-contener">
                             <svg class="icon--benefits" width="64" height="64">
-                                <use href="./images/icon/sprit.svg#icon-diagram"></use>
+                                <use href="./images/icon/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
 
@@ -113,8 +113,8 @@
                     </li>
                     <li class="benefits-item">
                         <div class="icon-benefits-contener">
-                            <svg class="icon-benefits" width="16" height="16">
-                                <use href="./images/icon/sprit.svg#icon-astronaut"></use>
+                            <svg class="icon-benefits" width="64" height="64">
+                                <use href="./images/icon/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div>
 
@@ -143,25 +143,25 @@
                                 <li class="icon-team-item">
                                     <a class="icon-team-link">
                                         <svg class="icon-team" width="16" height="16">
-                                            <use href="./images/icon/sprit.svg#icon-instagram"></use>
+                                            <use href="./images/icon/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="icon-team-item">
                                     <a class="icon-team-link">
                                         <svg class="icon-team" width="16" height="16">
-                                            <use href="./images/icon/sprit.svg#icon-twitter"></use>
+                                            <use href="./images/icon/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="icon-team-item"><a class="icon-team-link">
                                         <svg class="icon-team" width="16" height="16">
-                                            <use href="./images/icon/sprit.svg#icon-facebook"></use>
+                                            <use href="./images/icon/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a></li>
                                 <li class="icon-team-item"><a class="icon-team-link">
                                         <svg class="icon-team" width="16" height="16">
-                                            <use href="./images/icon/sprit.svg#icon-linkedin"></use>
+                                            <use href="./images/icon/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -179,25 +179,25 @@
                                 <li class="icon-team-item">
                                     <a class="icon-team-link">
                                         <svg class="icon-team" width="16" height="16">
-                                            <use href="./images/icon/sprit.svg#icon-instagram"></use>
+                                            <use href="./images/icon/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="icon-team-item">
                                     <a class="icon-team-link">
                                         <svg class="icon-team" width="16" height="16">
-                                            <use href="./images/icon/sprit.svg#icon-twitter"></use>
+                                            <use href="./images/icon/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="icon-team-item"><a class="icon-team-link">
                                         <svg class="icon-team" width="16" height="16">
-                                            <use href="./images/icon/sprit.svg#icon-facebook"></use>
+                                            <use href="./images/icon/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a></li>
                                 <li class="icon-team-item"><a class="icon-team-link">
                                         <svg class="icon-team" width="16" height="16">
-                                            <use href="./images/icon/sprit.svg#icon-linkedin"></use>
+                                            <use href="./images/icon/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -216,25 +216,25 @@
                                 <li class="icon-team-item">
                                     <a class="icon-team-link">
                                         <svg class="icon-team" width="16" height="16">
-                                            <use href="./images/icon/sprit.svg#icon-instagram"></use>
+                                            <use href="./images/icon/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="icon-team-item">
                                     <a class="icon-team-link">
                                         <svg class="icon-team" width="16" height="16">
-                                            <use href="./images/icon/sprit.svg#icon-twitter"></use>
+                                            <use href="./images/icon/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="icon-team-item"><a class="icon-team-link">
                                         <svg class="icon-team" width="16" height="16">
-                                            <use href="./images/icon/sprit.svg#icon-facebook"></use>
+                                            <use href="./images/icon/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a></li>
                                 <li class="icon-team-item"><a class="icon-team-link">
                                         <svg class="icon-team" width="16" height="16">
-                                            <use href="./images/icon/sprit.svg#icon-linkedin"></use>
+                                            <use href="./images/icon/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -251,25 +251,25 @@
                                 <li class="icon-team-item">
                                     <a class="icon-team-link">
                                         <svg class="icon-team" width="16" height="16">
-                                            <use href="./images/icon/sprit.svg#icon-instagram"></use>
+                                            <use href="./images/icon/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="icon-team-item">
                                     <a class="icon-team-link">
                                         <svg class="icon-team" width="16" height="16">
-                                            <use href="./images/icon/sprit.svg#icon-twitter"></use>
+                                            <use href="./images/icon/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="icon-team-item"><a class="icon-team-link">
                                         <svg class="icon-team" width="16" height="16">
-                                            <use href="./images/icon/sprit.svg#icon-facebook"></use>
+                                            <use href="./images/icon/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a></li>
                                 <li class="icon-team-item"><a class="icon-team-link">
                                         <svg class="icon-team" width="16" height="16">
-                                            <use href="./images/icon/sprit.svg#icon-linkedin"></use>
+                                            <use href="./images/icon/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -370,28 +370,28 @@
                     <li class="icon-footer-item">
                         <a class="icon-footer-link">
                             <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icon/sprit.svg#icon-instagram"></use>
+                                <use href="./images/icon/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="icon-footer-item">
                         <a class="icon-footer-link">
                             <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icon/sprit.svg#icon-twitter"></use>
+                                <use href="./images/icon/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="icon-footer-item">
                         <a class="icon-footer-link">
                             <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icon/sprit.svg#icon-facebook"></use>
+                                <use href="./images/icon/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="icon-footer-item">
                         <a class="icon-footer-link">
                             <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icon/sprit.svg#icon-linkedin"></use>
+                                <use href="./images/icon/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
