--- a/index.html
+++ b/index.html
@@ -355,7 +355,8 @@
 
     <footer class="page-footer">
         <div class="container container-footer">
-            <div><a class="logo logo-footer" href="./index.html">Web<span class="accent-footer">Studio</span></a>
+            <div class="container-logo-footer">
+                <a class="logo logo-footer" href="./index.html">Web<span class="accent-footer">Studio</span></a>
                 <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing
                     &
                     growth solutions.
